update dependencies and add record status